--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
 
 Final Project/images/paldea_pokemon_league_logo_by_jormxdos_dffvs1y-fullview.png
+bootstrap-news-template/single-page.html
+bootstrap-news-template/READ-ME.txt
+bootstrap-news-template/LICENSE.txt
+bootstrap-news-template/lib/slick/slick.scss
+bootstrap-news-template/lib/slick/slick.min.js
+bootstrap-news-template/lib/slick/slick.less
+bootstrap-news-template/lib/slick/slick.js
+bootstrap-news-template/lib/slick/slick.css
+bootstrap-news-template/lib/slick/slick-theme.scss
+bootstrap-news-template/lib/slick/slick-theme.less
+bootstrap-news-template/lib/slick/slick-theme.css
+bootstrap-news-template/lib/slick/fonts/slick.woff
+bootstrap-news-template/lib/slick/fonts/slick.ttf
+bootstrap-news-template/lib/slick/fonts/slick.svg
+bootstrap-news-template/lib/slick/fonts/slick.eot
+bootstrap-news-template/lib/slick/config.rb
+bootstrap-news-template/lib/slick/ajax-loader.gif
+bootstrap-news-template/lib/easing/easing.min.js
+bootstrap-news-template/lib/easing/easing.js
+bootstrap-news-template/js/main.js
+bootstrap-news-template/index.html
+bootstrap-news-template/img/news-825x525.jpg
+bootstrap-news-template/img/news-450x350-2.jpg
+bootstrap-news-template/img/news-450x350-1.jpg
+bootstrap-news-template/img/news-350x223-5.jpg
+bootstrap-news-template/img/news-350x223-4.jpg
+bootstrap-news-template/img/news-350x223-3.jpg
+bootstrap-news-template/img/news-350x223-2.jpg
+bootstrap-news-template/img/news-350x223-1.jpg
+bootstrap-news-template/img/logo.png
+bootstrap-news-template/img/ads-2.jpg
+bootstrap-news-template/img/ads-1.jpg
+bootstrap-news-template/css/style.css
+bootstrap-news-template/contact.html
+bootstrap-news-template/bootstrap-news-template.jpg
