timeline and some clean up

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,14 @@ bootstrap-news-template/css/style.css
 bootstrap-news-template/contact.html
 bootstrap-news-template/bootstrap-news-template.jpg
 Final Project/video/videoplayback.mp4
+timeline/index.html
+timeline/main.js
+timeline/style.css
+vertical-timeline-master/assets/css/style.css
+vertical-timeline-master/assets/css/style.scss
+vertical-timeline-master/assets/img/cd-icon-location.svg
+vertical-timeline-master/assets/img/cd-icon-movie.svg
+vertical-timeline-master/assets/img/cd-icon-picture.svg
+vertical-timeline-master/assets/js/main.js
+vertical-timeline-master/index.html
+vertical-timeline-master/README.md
