separate CSS files
CSS for current news is pretty much done

--- a/.gitignore
+++ b/.gitignore
@@ -277,3 +277,4 @@ Chess News _ About Us_files/jquery.min.js.download
 Chess News _ About Us_files/developers.jpg
 Chess News _ About Us_files/all.min.css
 Chess News _ About Us.html
+.DS_Store
