--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,4 @@ Chess News _ About Us_files/developers.jpg
 Chess News _ About Us_files/all.min.css
 Chess News _ About Us.html
 .DS_Store
+Final Project/scripts/Qk4yGHiw.json
