report, footer and code documentation left

--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,5 @@ Chess News _ About Us_files/all.min.css
 Chess News _ About Us.html
 .DS_Store
 Final Project/scripts/Qk4yGHiw.json
+Paldea Times.mp4
+Paldea Times.webm
