--- a/.gitignore
+++ b/.gitignore
@@ -281,3 +281,6 @@ Chess News _ About Us.html
 Final Project/scripts/Qk4yGHiw.json
 Paldea Times.mp4
 Paldea Times.webm
+Final Project/2023.3.1 Final Project.zip
+Final Project/2023.03.01 Final Project Report still in work.zip
+Final Project/2023.03.01 Final Project- Report still in Work.zip
