--- a/.gitignore
+++ b/.gitignore
@@ -284,3 +284,4 @@ Paldea Times.webm
 Final Project/2023.3.1 Final Project.zip
 Final Project/2023.03.01 Final Project Report still in work.zip
 Final Project/2023.03.01 Final Project- Report still in Work.zip
+Final Project/2021.03.01 Final Project - Report still in Work.zip
