--- a/.gitignore
+++ b/.gitignore
@@ -285,3 +285,5 @@ Final Project/2023.3.1 Final Project.zip
 Final Project/2023.03.01 Final Project Report still in work.zip
 Final Project/2023.03.01 Final Project- Report still in Work.zip
 Final Project/2021.03.01 Final Project - Report still in Work.zip
+Final Project/2023.03.02 Final Project - Report still in the work.zip
+Final Project/images/logo.jpeg
