--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,5 @@ Final Project/2023.03.01 Final Project- Report still in Work.zip
 Final Project/2021.03.01 Final Project - Report still in Work.zip
 Final Project/2023.03.02 Final Project - Report still in the work.zip
 Final Project/images/logo.jpeg
+Final Project/combined.css
+Final Project/2023.03.09 Cleaned Final Project - Report still in work.zip
