--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,4 @@ Final Project/2023.03.02 Final Project - Report still in the work.zip
 Final Project/images/logo.jpeg
 Final Project/combined.css
 Final Project/2023.03.09 Cleaned Final Project - Report still in work.zip
+example - chess news/stylesheet/report.css
