--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,4 @@ bootstrap-news-template/contact.html
 bootstrap-news-template/bootstrap-news-template.jpg
 example - chess news/report.css
 example - chess news/report.css
+*.excalidraw
