--- a/.gitignore
+++ b/.gitignore
@@ -288,3 +288,4 @@ bootstrap-news-template/bootstrap-news-template.jpg
 example - chess news/report.css
 example - chess news/report.css
 *.excalidraw
+*.zip
